--- a/index.html
+++ b/index.html
@@ -42,51 +42,42 @@
         <div class="pizza-toppings">
           <h3>Pile On</h3>
           <div class="row">
-            <div class="col-md-3">
-              <div class="freebies">
-                <h4>Freebies</h4>
-                <ul>
-                  <li><input name="topping1" type="checkbox" value="0" id="freeCheese" checked>Free Cheese!</input></li>
-                  <li><input name="topping2" type="checkbox" value="0" id="freeSauce" checked>Free Sauce!</input></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
               <div class="meat">
                 <h4>Meaty Goodness</h4>
                 <ul>
-                  <li><input name="topping" type="checkbox" value="4" id="pepperoni">Pepperoni</input></li>
-                  <li><input name="topping" type="checkbox" value="4" id="sausage">Sausage</input></li>
-                  <li><input name="topping" type="checkbox" value="4" id="canadianBacon">Canadian Bacon</input></li>
+                  <li><input class="topping" type="checkbox" value="4" id="pepperoni">Pepperoni</input></li>
+                  <li><input class="topping" type="checkbox" value="4" id="sausage">Sausage</input></li>
+                  <li><input class="topping" type="checkbox" value="4" id="canadianBacon">Canadian Bacon</input></li>
                 </ul>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
               <div class="vegetables">
                 <h4>Keep It Healthy</h4>
                 <ul>
-                  <li><input name="topping6" type="checkbox" value="3" id="mushrooms">Mushrooms</input></li>
-                  <li><input name="topping7" type="checkbox" value="3" id="olives">Olives</input></li>
-                  <li><input name="topping8" type="checkbox" value="3" id="onions">Onions</input></li>
-                  <li><input name="topping9" type="checkbox" value="3" id="peppers">Peppers</input></li>
-                  <li><input name="topping10" type="checkbox" value="3" id="pineapple">Pineapple</input></li>
+                  <li><input class="topping" type="checkbox" value="3" id="mushrooms">Mushrooms</input></li>
+                  <li><input class="topping" type="checkbox" value="3" id="olives">Olives</input></li>
+                  <li><input class="topping" type="checkbox" value="3" id="onions">Onions</input></li>
+                  <li><input class="topping" type="checkbox" value="3" id="peppers">Peppers</input></li>
+                  <li><input class="topping" type="checkbox" value="3" id="pineapple">Pineapple</input></li>
                 </ul>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
               <div class="extras">
                 <h4>Double Up</h4>
                 <ul>
-                  <li><input name="topping11" type="checkbox" value="2" id="doubleSause">Double Cheese</input></li>
-                  <li><input name="topping12" type="checkbox" value="2" id="doubleCheese">Double Sauce</input></li>
-                  <li><input name="topping13" type="checkbox" value="4" id="doubleMeat">Double Meat (each)</input></li>
-                  <li><input name="topping14" type="checkbox" value="3" id="doubleVegetables">Double Vegetables (each)</input></li>
+                  <li><input class="topping" type="checkbox" value="2" id="doubleSause">Double Cheese</input></li>
+                  <li><input class="topping" type="checkbox" value="2" id="doubleCheese">Double Sauce</input></li>
+                  <li><input class="topping" type="checkbox" value="4" id="doubleMeat">Double Meat (each)</input></li>
+                  <li><input class="topping" type="checkbox" value="3" id="doubleVegetables">Double Vegetables (each)</input></li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-        <button class="btn btn-primary" type="submit" name="button">Make My Pizza!</button>
+        <button class="submit btn btn-danger" type="submit" name="button">Make My Pizza!</button>
       </form>
 
       <div id="toppingCost">
