--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>Eat Up!</h1>
+      <div class="jumbotron">
+        <h1>Eat Up!</h1>
+      </div>
       <form class="build-pizza">
-        <div id="pizza-size">
+        <div class="pizza-size">
           <h3>Bigger is Better</h3>
           <div class="enormous">
             <label>
