Fix issue of incorrect price being returned with the receipt.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
+          <img src="img/pizza.jpg" alt="A picture of a pizza with topping piled high." />
         <h1>Eat Up!</h1>
       </div>
       <form class="build-pizza">
@@ -86,10 +87,7 @@
       </div>
 
       <div class="show-receipt">
-        <h3>Receipt</h3>
-        <ul class="receiptInfo">
-
-        </ul>
+        <h3 class="receiptInfo">Receipt:</h3>
       </div>
     </div>
   </body>
